# routes/order.routes.js
@@ -1,0 +1,7 @@
+const express = require("express");
+const {sendOrderToPharmacy} = require("../controllers/order.controllers");
+const router = express.Router();
+
+router.post("/sendToPharmacy", sendOrderToPharmacy);
+
+module.exports = router;
